--- a/main/main.css
+++ b/main/main.css
@@ -4,7 +4,6 @@ body {
     -webkit-background-size: 100%; 
     -o-background-size: 100%; 
     background-size: 100%; 
-    
    }
    .div{
     display: inline-block;
@@ -12,6 +11,8 @@ body {
     height: 59px;
     width: 672px;
     background-color: rgb(217, 247, 255);
+    border: 0px solid;
+    border-radius: 25px;
    }
    .hic{
     display: inline-block;
@@ -20,6 +21,8 @@ body {
     background-color: rgb(0, 255, 149);
     width: 1274px;
     opacity: 0;
+    border: 0px solid;
+    border-radius: 25px;
    }
    .fgt{
     display: inline-block;
@@ -30,6 +33,8 @@ body {
     margin: 109px -1042px;
     height: 53px;
     width: 225px;
+    border: 0px solid;
+    border-radius: 25px;
    }
    .fgt:hover .hic{
        opacity: 1;
@@ -48,6 +53,8 @@ body {
     font-size: 32px;
     position: absolute;
     text-align: center;
+    border: 0px solid;
+    border-radius: 25px;
    }
    .div:hover .hic{
        opacity: 1;
@@ -71,6 +78,8 @@ body {
     width: 672px;
     background-color: rgb(136, 252, 204);
     position: absolute;
+    border: 0px solid;
+    border-radius: 25px;
    }
    .met{
     display: inline-block;
@@ -93,6 +102,8 @@ body {
        text-decoration: none;
        color: black;
        background-color: rgb(62, 127, 233);
+       border: 0px solid;
+    border-radius: 25px;
        
    }
    .fi a:hover{
@@ -109,6 +120,8 @@ body {
     margin: 51px -149px;
     height: 38px;
     width: 160px;
+    border: 0px solid;
+    border-radius: 25px;
     background-color: rgb(255, 255, 255);
     font-family: 'Monoton', cursive;
     font-size: 26px;
