--- a/main/main.css
+++ b/main/main.css
@@ -1,5 +1,5 @@
 body {
-    background: url(back.jpg) no-repeat;
+    background: url(back.png) no-repeat;
     -moz-background-size: 100%; 
     -webkit-background-size: 100%; 
     -o-background-size: 100%; 
