--- a/main/main.css
+++ b/main/main.css
@@ -1,3 +1,12 @@
+@media screen and (max-width: 600px) {
+    body {
+        font-size:1.5em;
+    }
+    …
+    h2 {
+        font-size:2.5em;
+    }
+}
 body {
     background: url(back.png) no-repeat;
     -moz-background-size: 100%; 
